--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <EditText
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:background=""
+        android:background="@drawable/borderlogin"
         android:ems="10"
         android:hint="Username"
         android:inputType="textEmailAddress"
@@ -20,10 +20,10 @@
         app:flow_horizontalBias="0.496"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.537"
+        app:layout_constraintVertical_bias="0.554"
         tools:ignore="Autofill" />
 
     <Button
@@ -36,16 +36,17 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.837" />
+        app:layout_constraintVertical_bias="0.838" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="268dp"
-        android:background="@drawable/edittext_border2"
+        android:layout_marginBottom="248dp"
+        android:background="@drawable/borderlogin"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -55,14 +56,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_email"
         app:layout_constraintVertical_bias="0.071"
         tools:ignore="Autofill" />
 
     <Button
         android:id="@+id/bt_login"
-        android:layout_width="248dp"
-        android:layout_height="53dp"
+        android:layout_width="250dp"
+        android:layout_height="48dp"
         android:backgroundTint="@color/black"
         android:text="Login"
         android:textSize="20dp"
@@ -71,16 +71,24 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_password"
-        app:layout_constraintVertical_bias="0.181" />
+        app:layout_constraintVertical_bias="0.45" />
+
+    <Button
+        android:layout_width="61dp"
+        android:layout_height="47dp"
+        android:background="@drawable/about_us_24"
+        app:srcCompat="@drawable/about_us_24"
+        tools:layout_editor_absoluteX="330dp"
+        tools:layout_editor_absoluteY="16dp" />
 
     <ImageView
         android:id="@+id/mainlogo"
-        android:layout_width="247dp"
-        android:layout_height="249dp"
-        android:layout_marginBottom="380dp"
+        android:layout_width="344dp"
+        android:layout_height="272dp"
+        android:layout_marginBottom="360dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/mainlogo" />
 
