--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="violet">#0A0217</color>
+    <color name="purple">#404E2567</color>
+    <color name="darkviolet">#2B0E5A</color>
+    <color name="yellow">#EFC034</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#5d5555</color>
+    <color name="black">#000000</color>
+    <color name="underLine">#8D8888</color>
+    <color name="md_blue_grey_300">#6699CC</color>
+    <color name="transparent_round_background">#00FFFFFF</color>
 </resources>
